--- a/app/src/main/res/layout/console_barcode.xml
+++ b/app/src/main/res/layout/console_barcode.xml
@@ -48,7 +48,8 @@
 	            android:onClick="sendClick"
 	            android:text="开启扫描"
 	            android:textColor="#2a2a2a"
-	            android:textSize="28sp" />
+	            android:textSize="28sp"
+                android:visibility="gone"/>
 
 	        <ProgressBar
 	            android:id="@+id/progressBarScan"
@@ -63,7 +64,6 @@
 	            style="?android:attr/buttonBarButtonStyle"
 	            android:layout_width="200dp"
 	            android:layout_height="60dp"
-	            android:layout_marginTop="30dp"
 	            android:background="@drawable/btn_style_green"
 	            android:onClick="clearClick"
 	            android:text="清空结果"
@@ -75,7 +75,8 @@
 	            android:layout_width="400dp"
 	            android:layout_height="150dp"
 	            android:scaleType="fitXY" 
-	            android:layout_marginTop="145dp"/>
+	            android:layout_marginTop="145dp"
+                android:visibility="gone"/>
 
 	    </LinearLayout>
     </LinearLayout>
